src/objects/CS_Request__c.object
<CustomObject>
    <fields>
        <fullName>CS_Asset__c</fullName>
        <formula>CS_Case__r.Asset.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Associated_Jira__c</fullName>
        <formula>CS_Case__r.CS_Associated_Jira__c</formula>
        <label>Associated Jira</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Case_Number__c</fullName>
        <formula>CS_Case__r.CaseNumber</formula>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Case_Product_Version__c</fullName>
        <formula>CS_Case__r.CS_Product_Version__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Product Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Case_Severity__c</fullName>
        <formula>TEXT(CS_Case__r.Severity__c)</formula>
        <label>Case Severity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Case_Subject__c</fullName>
        <formula>CS_Case__r.Subject</formula>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Commitment__c</fullName>
        <label>Commitment</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Consideration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commitment Met</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Customer_Commitment__c</fullName>
        <label>Customer Commitment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Customer_Impact__c</fullName>
        <label>Customer Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Desired_Response_Date__c</fullName>
        <description>Desired Response date</description>
        <label>Desired Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Dev_Current_Status__c</fullName>
        <label>Dev Current Status</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Dev_Jira__c</fullName>
        <label>Dev Jira</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Email_Alias__c</fullName>
        <description>Email alias that is populated by workflow rule based on pgm request owner selected.</description>
        <label>Email Alias</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CS_Escalation_Note__c</fullName>
        <inlineHelpText>Description/Synopsis</inlineHelpText>
        <label>Case Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Escalation_Request_Date__c</fullName>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Fix_by_Version__c</fullName>
        <label>Requested Fix Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Fixed_Version__c</fullName>
        <label>Fixed Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Incident_Category__c</fullName>
        <label>Incident Category</label>
        <picklist>
            <picklistValues>
                <fullName>Complex Solutioning Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Direction Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Practice Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Bandwidth</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Information_Request__c</fullName>
        <inlineHelpText>Question</inlineHelpText>
        <label>Information Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Lead_Req_Date__c</fullName>
        <label>Lead Assistance Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Next_Dev_Response__c</fullName>
        <label>Next Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Request_Case_Owner_Team__c</fullName>
        <formula>CS_Case__r.CS_Owner_Team__c</formula>
        <label>Request Case Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Request_Case_Support_Group__c</fullName>
        <formula>CS_Case__r.CS_Support_Group__c</formula>
        <label>Request Case Support Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Request_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Guidewire Internal person submitting the request. (Please choose Guidewire employees only)</inlineHelpText>
        <label>Request Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Request_Reason__c</fullName>
        <label>Request Reason</label>
        <picklist>
            <controllingField>CS_Request_Type__c</controllingField>
            <picklistValues>
                <fullName>None Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Request/Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Fix Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate Patch Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Provided Workaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Validate Workaround/Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix in Patch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix in Maintenance Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address in Next Major Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Request_Status__c</fullName>
        <inlineHelpText>Request Status</inlineHelpText>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated by Requestor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Requestor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Long Term Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term Request</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_ID__c</fullName>
        <externalId>true</externalId>
        <label>RightNow ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CS_RightNow_Long_Term_Request__c</fullName>
        <label>RightNow Long Term Request</label>
        <picklist>
            <picklistValues>
                <fullName>None Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix in Patch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix in Maintenance Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address in Next Major Release</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Short_Term_Request__c</fullName>
        <label>RightNow Short Term Request</label>
        <picklist>
            <picklistValues>
                <fullName>None Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Request/Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Fix Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate Patch Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Provided Workaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Validate Workaround/Code</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_SN_Jira_Id__c</fullName>
        <label>SN Jira Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Submitted_First_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is checked when the request was first submitted</description>
        <label>Submitted First Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Account__c</fullName>
        <formula>CS_Case__r.Account.Name</formula>
        <label>Case Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Email__c</fullName>
        <description>Case owner&apos;s email is populated from workflow field update.</description>
        <label>Case Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dev_Assignee_Group__c</fullName>
        <label>Dev Assignee Group</label>
        <picklist>
            <picklistValues>
                <fullName>CorePerf Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Team</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dev_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dev Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Request_Creator__c</fullName>
        <formula>If( CreatedById = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Request Creator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Request_Owner__c</fullName>
        <formula>If( CS_Request_Owner__c = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Request Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Response_Owner__c</fullName>
        <formula>If( CS_Request_Owner__c = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Response Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pgm_Request_Owner__c</fullName>
        <label>Pgm Request Owner</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter PgM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter PgM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter PgM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform PgM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataManagement PgM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals PgM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Case_Platform_Issue__c</fullName>
        <formula>CS_Case__r.CS_Platform_Issue__c</formula>
        <label>Request Case Platform Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person who is assigned to provide a response.</inlineHelpText>
        <label>Response Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>Accelerator_Request_CS_Request</fullName>
        <columns>NAME</columns>
        <columns>CS_Request_Status__c</columns>
        <columns>CS_Request_Owner__c</columns>
        <columns>CS_Escalation_Request_Date__c</columns>
        <columns>Response_Owner__c</columns>
        <columns>CS_Case_Number__c</columns>
        <columns>CS_Case_Product_Version__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CS_Request__c.Accelerator_Request</value>
        </filters>
        <label>Accelerator Request</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CS_Request_Status__c</columns>
        <columns>CS_Request_Owner__c</columns>
        <columns>CS_Escalation_Request_Date__c</columns>
        <columns>CS_Request_Type__c</columns>
        <columns>CS_Request_Reason__c</columns>
        <columns>Response_Owner__c</columns>
        <columns>CS_Case_Number__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Answered</value>
        </filters>
        <label>All Open Requests</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BillingCenter_Dev</fullName>
        <columns>CS_Case_Number__c</columns>
        <columns>NAME</columns>
        <columns>Dev_Assignee__c</columns>
        <columns>CS_Next_Dev_Response__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CS_Request__c.Dev_Request</value>
        </filters>
        <filters>
            <field>CS_Request_Type__c</field>
            <operation>equals</operation>
            <value>Short Term Request</value>
        </filters>
        <filters>
            <field>CS_Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Pgm_Request_Owner__c</field>
            <operation>equals</operation>
            <value>BillingCenter PgM</value>
        </filters>
        <label>BillingCenter Dev</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Product_team_PgMs</group>
            <group>GW_Product_team_developers</group>
            <group>GW_Release_and_Documentation_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClaimCenter_Dev</fullName>
        <columns>CS_Case_Number__c</columns>
        <columns>NAME</columns>
        <columns>Dev_Assignee__c</columns>
        <columns>CS_Next_Dev_Response__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CS_Request__c.Dev_Request</value>
        </filters>
        <filters>
            <field>CS_Request_Type__c</field>
            <operation>equals</operation>
            <value>Short Term Request</value>
        </filters>
        <filters>
            <field>CS_Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Pgm_Request_Owner__c</field>
            <operation>equals</operation>
            <value>ClaimCenter PgM</value>
        </filters>
        <label>ClaimCenter Dev</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Product_team_PgMs</group>
            <group>GW_Product_team_developers</group>
            <group>GW_Release_and_Documentation_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CorePerf_Dev</fullName>
        <columns>CS_Case_Number__c</columns>
        <columns>NAME</columns>
        <columns>Dev_Assignee__c</columns>
        <columns>CS_Next_Dev_Response__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CS_Request__c.Dev_Request</value>
        </filters>
        <filters>
            <field>CS_Request_Type__c</field>
            <operation>equals</operation>
            <value>Short Term Request</value>
        </filters>
        <filters>
            <field>CS_Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Pgm_Request_Owner__c</field>
            <operation>equals</operation>
            <value>BillingCenter PgM,ClaimCenter PgM,PolicyCenter PgM,Platform PgM</value>
        </filters>
        <filters>
            <field>Dev_Assignee_Group__c</field>
            <operation>equals</operation>
            <value>CorePerf Team</value>
        </filters>
        <label>CorePerf Dev</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Product_team_PgMs</group>
            <group>GW_Product_team_developers</group>
            <group>GW_Release_and_Documentation_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DataManagement_Dev</fullName>
        <columns>CS_Case_Number__c</columns>
        <columns>NAME</columns>
        <columns>Dev_Assignee__c</columns>
        <columns>CS_Next_Dev_Response__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CS_Request__c.Dev_Request</value>
        </filters>
        <filters>
            <field>CS_Request_Type__c</field>
            <operation>equals</operation>
            <value>Short Term Request</value>
        </filters>
        <filters>
            <field>CS_Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Pgm_Request_Owner__c</field>
            <operation>equals</operation>
            <value>DataManagement PgM</value>
        </filters>
        <label>DataManagement Dev</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Product_team_PgMs</group>
            <group>GW_Product_team_developers</group>
            <group>GW_Release_and_Documentation_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dev_Request_All</fullName>
        <columns>NAME</columns>
        <columns>CS_Request_Status__c</columns>
        <columns>Pgm_Request_Owner__c</columns>
        <columns>CS_Escalation_Request_Date__c</columns>
        <columns>CS_Request_Type__c</columns>
        <columns>CS_Request_Reason__c</columns>
        <columns>CS_Incident_Category__c</columns>
        <columns>CS_Case_Number__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CS_Request__c.Dev_Request</value>
        </filters>
        <label>Dev Request All</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Product_team_PgMs</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dev_Request_CS_Request</fullName>
        <columns>CS_Case_Number__c</columns>
        <columns>NAME</columns>
        <columns>CS_Request_Type__c</columns>
        <columns>CS_Request_Status__c</columns>
        <columns>Pgm_Request_Owner__c</columns>
        <columns>Dev_Assignee__c</columns>
        <columns>CS_Next_Dev_Response__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CS_Request__c.Dev_Request</value>
        </filters>
        <filters>
            <field>CS_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Answered</value>
        </filters>
        <label>Dev Request</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Digital_Portals_Dev</fullName>
        <columns>CS_Case_Number__c</columns>
        <columns>NAME</columns>
        <columns>Dev_Assignee__c</columns>
        <columns>CS_Next_Dev_Response__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CS_Request__c.Dev_Request</value>
        </filters>
        <filters>
            <field>CS_Request_Type__c</field>
            <operation>equals</operation>
            <value>Short Term Request</value>
        </filters>
        <filters>
            <field>CS_Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Pgm_Request_Owner__c</field>
            <operation>equals</operation>
            <value>Digital Portals PgM</value>
        </filters>
        <label>Digital Portals Dev</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Product_team_PgMs</group>
            <group>GW_Product_team_developers</group>
            <group>GW_Release_and_Documentation_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EDC_Dev</fullName>
        <columns>CS_Case_Number__c</columns>
        <columns>NAME</columns>
        <columns>Dev_Assignee__c</columns>
        <columns>CS_Next_Dev_Response__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CS_Request__c.Dev_Request</value>
        </filters>
        <filters>
            <field>CS_Request_Type__c</field>
            <operation>equals</operation>
            <value>Short Term Request</value>
        </filters>
        <filters>
            <field>CS_Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Pgm_Request_Owner__c</field>
            <operation>equals</operation>
            <value>EDC</value>
        </filters>
        <label>EDC Dev</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Product_team_PgMs</group>
            <group>GW_Product_team_developers</group>
            <group>GW_Release_and_Documentation_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enablement_All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CS_Request_Status__c</columns>
        <columns>CS_Request_Owner__c</columns>
        <columns>CS_Escalation_Request_Date__c</columns>
        <columns>CS_Request_Type__c</columns>
        <columns>CS_Request_Reason__c</columns>
        <columns>Response_Owner__c</columns>
        <columns>CS_Case_Number__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Request_Case_Owner_Team__c</field>
            <operation>equals</operation>
            <value>Enablement-CE,Enablement-SE,Enablement-Other</value>
        </filters>
        <label>Implementation All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enablement_Answered</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CS_Request_Status__c</columns>
        <columns>CS_Request_Owner__c</columns>
        <columns>CS_Escalation_Request_Date__c</columns>
        <columns>CS_Request_Type__c</columns>
        <columns>CS_Request_Reason__c</columns>
        <columns>Response_Owner__c</columns>
        <columns>CS_Case_Number__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Request_Case_Owner_Team__c</field>
            <operation>equals</operation>
            <value>Enablement-CE,Enablement-SE,Enablement-Other,Enablement Queue</value>
        </filters>
        <filters>
            <field>CS_Request_Status__c</field>
            <operation>equals</operation>
            <value>Answered</value>
        </filters>
        <label>Implementation  Answered</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Enablement_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enablement_Billing_Center_Open</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CS_Request_Status__c</columns>
        <columns>CS_Request_Owner__c</columns>
        <columns>CS_Escalation_Request_Date__c</columns>
        <columns>CS_Request_Type__c</columns>
        <columns>CS_Request_Reason__c</columns>
        <columns>Response_Owner__c</columns>
        <columns>CS_Case_Number__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Request_Case_Owner_Team__c</field>
            <operation>equals</operation>
            <value>Enablement Queue,Enablement-CE,Enablement-SE,Enablement-Other</value>
        </filters>
        <filters>
            <field>CS_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Answered</value>
        </filters>
        <filters>
            <field>CS_Request_Case_Support_Group__c</field>
            <operation>equals</operation>
            <value>Billing System</value>
        </filters>
        <label>BillingCenter Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Enablement_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enablement_ClaimCenter_Open</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CS_Request_Status__c</columns>
        <columns>CS_Request_Owner__c</columns>
        <columns>CS_Escalation_Request_Date__c</columns>
        <columns>CS_Request_Type__c</columns>
        <columns>CS_Request_Reason__c</columns>
        <columns>Response_Owner__c</columns>
        <columns>CS_Case_Number__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Request_Case_Owner_Team__c</field>
            <operation>equals</operation>
            <value>Enablement-CE,Enablement-SE,Enablement-Other</value>
        </filters>
        <filters>
            <field>CS_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Answered</value>
        </filters>
        <filters>
            <field>CS_Request_Case_Support_Group__c</field>
            <operation>equals</operation>
            <value>Claim System</value>
        </filters>
        <label>ClaimCenter Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Enablement_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enablement_Data_Open</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CS_Request_Status__c</columns>
        <columns>CS_Request_Owner__c</columns>
        <columns>CS_Escalation_Request_Date__c</columns>
        <columns>CS_Request_Type__c</columns>
        <columns>CS_Request_Reason__c</columns>
        <columns>Response_Owner__c</columns>
        <columns>CS_Case_Number__c</columns>
        <columns>CS_Case_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Request_Case_Owner_Team__c</field>
            <operation>equals</operation>
            <value>Enablement-CE,Enablement-SE,Enablement-Other</value>
        </filters>
        <filters>
            <field>CS_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Answered</value>
        </filters>
        <filters>
            <field>CS_Request_Case_Support_Group__c</field>
            <operation>equals</operation>
            <value>Data Management</value>
        </filters>
        <label>Data Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Enablement_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Req-{00000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <recordTypes>
        <fullName>Accelerator_Request</fullName>
        <active>true</active>
        <label>Accelerator Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dev_Request</fullName>
        <active>true</active>
        <description>Request Type for Dev</description>
        <label>Dev Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enablement_Request</fullName>
        <active>true</active>
        <description>Enablement Request</description>
        <label>Enablement Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expertise_Request</fullName>
        <active>true</active>
        <description>Expertise Request</description>
        <label>Expertise Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Infrastructure_Request</fullName>
        <active>true</active>
        <description>Request Type for Infrastructure</description>
        <label>Infrastructure Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Request</fullName>
        <active>true</active>
        <description>Lead Request</description>
        <label>Lead Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>